# cane

./: .gitignore  Cargo.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/cane/: Cargo.toml
crates/cane/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  repl.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  approval.rs  lib.rs  message.rs  protocol.rs  tool.rs  workspace.rs
crates/core/src/provider/: mod.rs  openai.rs  sse.rs
crates/core/src/tools/: edit_file.rs  glob.rs  mod.rs  read_file.rs  write_file.rs
