[package]
name = "cane"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
cane-core = { path = "../core", version = "0.1.0" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
