[package]
name = "cane-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
dunce = "1.0.5"
futures-util = "0.3"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "fs", "time"] }
tokio-util = "0.7.18"
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6.5"
